feat(browser): add pre-proxy integrations
